--- a/public/demo/block.html
+++ b/public/demo/block.html
@@ -69,7 +69,7 @@ input[type=number]{direction:rtl;}
 <body autofocus tabindex='0'>
 <main class='row'>
 <svg class='grow' viewBox='0 0 10 24'>
-	<rect id='wall' fill='none' width='10' height='23'></rect>
+	<rect id='wall' width='10' height='23'></rect>
 </svg>
 <div class='column' style='min-width:7ch;width:var(--size);'>
 <div id='status'></div>
